--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-infinite-scroll-component": "^6.1.0",
         "react-router-dom": "^6.8.2",
         "styled-components": "^5.3.8",
+        "twin.macro": "^3.3.1",
         "vite-plugin-babel": "^1.1.3",
         "zmp-sdk": "^2.25.4",
         "zmp-ui": "^1.8.0-rc.3",
@@ -62,6 +63,7 @@
     },
     "devDependencies": {
         "@types/node": "^18.14.6",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
         "@vitejs/plugin-react": "2.2.0",
         "autoprefixer": "^10.4.13",
         "babel-plugin-macros": "^3.1.0",
@@ -70,6 +72,7 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-next": "^12.2.3",
         "eslint-config-prettier": "8.4.0",
+        "eslint-import-resolver-typescript": "^3.5.5",
         "eslint-plugin-jsx-a11y": "6.5.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "4.0.0",
@@ -86,7 +89,8 @@
         "prettier": "2.5.1",
         "sass": "^1.58.3",
         "tailwindcss": "^3.2.7",
-        "twin.macro": "^3.3.1",
+        "typescript": "^5.1.6",
+        "typescript-eslint": "^0.0.1-alpha.0",
         "vite": "2.9.15",
         "vite-plugin-babel-macros": "^1.0.6"
     }
