--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "devDependencies": {
         "@types/node": "^18.14.6",
         "@typescript-eslint/eslint-plugin": "^5.61.0",
-        "@vitejs/plugin-react": "2.2.0",
+        "@vitejs/plugin-react": "^1.3",
         "autoprefixer": "^10.4.13",
         "babel-plugin-macros": "^3.1.0",
         "cross-env": "^7.0.3",
