distinguish template name

--- a/app-config.json
+++ b/app-config.json
@@ -5,6 +5,7 @@
         "textColor": "white",
         "statusBarColor": "#046DD6",
         "leftButton": "back",
+        "actionBarHidden": true,
         "hideIOSSafeAreaBottom": true,
         "statusBar": "transparent"
     },
@@ -12,5 +13,8 @@
     "listCSS": [],
     "listSyncJS": [],
     "listAsyncJS": [],
-    "pages": []
+    "pages": [],
+    "template": {
+        "name": "zaui-egovernment"
+    }
 }
