--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "@types/react-dom": "^18.0.11",
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.26",
-        "@vitejs/plugin-react-refresh": "1.3.6",
         "@xuannghia/html2canvas": "^1.4.1",
         "clsx": "^1.2.1",
         "date-fns": "^2.30.0",
@@ -58,8 +57,8 @@
         "styled-components": "^5.3.8",
         "twin.macro": "^3.3.1",
         "vite-plugin-babel": "^1.1.3",
-        "zmp-sdk": "^2.25.4",
-        "zmp-ui": "^1.8.0-rc.3",
+        "zmp-sdk": "^2.43.4",
+        "zmp-ui": "^1.11.5",
         "zustand": "^4.3.6"
     },
     "devDependencies": {
